--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -76,6 +76,7 @@
                 android:text="Tổng cộng"
                 android:layout_weight="1"
                 android:textStyle="bold"
+                android:textSize="20dp"
                 />
 
             <TextView
@@ -84,53 +85,33 @@
                 android:layout_height="wrap_content"
                 android:text="$1250.00"
                 android:textStyle="bold"
+                android:textSize="20dp"
                 />
         </LinearLayout>
 
-        <!-- Tiền ship -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Tiền ship"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:id="@+id/cart_shipping_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$40.90" />
-        </LinearLayout>
 
         <!-- Tổng chi phí -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginTop="8dp">-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Tổng chi phí"
-                android:layout_weight="1"
-                android:textStyle="bold"
-                />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Tổng chi phí"-->
+<!--                android:layout_weight="1"-->
+<!--                android:textStyle="bold"-->
+<!--                />-->
 
-            <TextView
-                android:id="@+id/cart_total_cost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$1690.99"
-                android:textStyle="bold" />
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/cart_total_cost"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="$1690.99"-->
+<!--                android:textStyle="bold" />-->
+<!--        </LinearLayout>-->
     </LinearLayout>
 
     <!-- Nút thanh toán -->
