--- a/app/src/main/res/layout/activity_chi_tiet_sp.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_sp.xml
@@ -28,6 +28,17 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <ImageView
+        android:id="@+id/btnYeuThich_Red_CTSP"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/favorite_red"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
