--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -7,6 +7,15 @@
     android:gravity="center_vertical">
 
     <!-- Hình ảnh của sản phẩm -->
+    <CheckBox
+        android:id="@+id/checkGH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="304dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/cart_item_image"
         android:layout_width="70dp"
