--- a/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.Activity_ThanhToan">
+    tools:context=".Activity.ActivityCTSP_To_ThanhToan">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,12 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="2dp"
-                    tools:src="@drawable/ic_back" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -36,10 +31,78 @@
                     android:textAlignment="center"
                     android:textColor="@color/black"/>
             </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/rcvOrder_dt"/>
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:id="@+id/imgProduct_od_ctsp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    app:srcCompat="@drawable/nice_shoe" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvName_od_ctsp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tên của SP"
+                        android:layout_margin="5dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:textSize="20dp" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvSize_od_ctsp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Size"
+                            android:layout_margin="5dp"
+                            android:textSize="15dp" />
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:text=", "
+                            android:textSize="15dp" />
+                        <TextView
+                            android:id="@+id/tvSL_od_ctsp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Số lượng"
+                            android:layout_margin="5dp"
+                            android:textSize="15dp" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tvPrice_od_ctsp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:text="100 VNĐ"
+                        android:textColor="#ff00"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -153,7 +216,7 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@id/View"/>
                 <TextView
-                    android:id="@+id/txtTotal"
+                    android:id="@+id/tvTotal_od_ctsp"
                     style="@style/textStyleBold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -171,16 +234,16 @@
                     android:text="VND"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/Voucher"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                android:text="Voucher"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="18sp"-->
-<!--                android:textStyle="bold" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/Voucher"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:layout_marginBottom="8dp"-->
+            <!--                android:text="Voucher"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                android:textSize="18sp"-->
+            <!--                android:textStyle="bold" />-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:background="@color/white"
@@ -304,7 +367,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/txtPayment"
+                        android:id="@+id/txtPayment_od_ctsp"
                         android:layout_marginStart="8dp"
                         android:text="Phương thức thanh toán"
                         style="@style/textStyleBold"
@@ -326,7 +389,7 @@
             android:text="Order Now"
             android:textSize="16sp"
             android:textColor="@color/white"
-            android:id="@+id/btnOrder"
+            android:id="@+id/btnOrder_CTSP"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/blue"
