--- a/doan/src/Auth/Login/index.scss
+++ b/doan/src/Auth/Login/index.scss
@@ -4,6 +4,7 @@
 
   .img_background {
     position: relative;
+
     img {
       width: 100%;
       height: auto;
@@ -35,7 +36,12 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
+    display: none; // mặc định ẩn modal
+
+    &.active {
+      display: flex; // hiển thị modal khi có class 'active'
+    }
+
     justify-content: center;
     align-items: center;
 
